AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -1,6 +1,6 @@
-<h3 translate="admin.dashboard.DASHBOARD">
+<h3>
     <em class="icon-speedometer mr"></em>
-    Dashboard
+    <span translate="admin.dashboard.DASHBOARD">Dashboard</span>
 </h3>
 
 <!-- START widgets box-->
