AC-232 Add russian language(instead of Spanish)

--- a/web/assets/source/html/dashboard.html
+++ b/web/assets/source/html/dashboard.html
@@ -29,7 +29,7 @@
 						</div>
 						<small translate="admin.dashboard.application.APPLICATION">application<span ng-if="statistics.applicationsState.online > 1"><span ng-if="language.selected=='ru'">s</span></span></small>
 					</div>
-					<div class="text-uppercase">Online</div>
+					<div class="text-uppercase" translate="admin.dashboard.application.ONLINE">Online</div>
 				</div>
 			</div>
 		</div>
