--- a/web/admin/source/resource/html/users/login.html
+++ b/web/admin/source/resource/html/users/login.html
@@ -1,4 +1,4 @@
-<div ng-controller="LoginCtrl" class="block-center mt-xl wd-xl">
+<div ng-controller="LoginController" class="block-center mt-xl wd-xl">
 	<!-- START panel-->
 	<div class="panel panel-dark panel-flat">
 
