--- a/web/admin/source/resource/html/grid-template.html
+++ b/web/admin/source/resource/html/grid-template.html
@@ -1,37 +1,49 @@
 <h3>
-	<em class="icon-globe-alt mr"></em>
-	<span translate="locales.LOCALES">Locales</span>
+    <em class="fa fa-language mr"></em>
+    Locales
 </h3>
 
 <div ng-controller="FormBuilderController as vm">
-		<div id="filters.panel" class="panel panel-default">
-			<div class="panel-heading">
-				<paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
-				<h3 class="panel-title">
-					<em class="fa fa-filter mr-sm"></em>
-					<span translate="admin.general.FILTERS">Filters</span>
-				</h3>
-			</div>
-			<div  class="form-horizontal">
-				<div collapse="filters.panel" class="panel-wrapper">
-					<div class="panel-body pb">
-						<div class="row">
-							<div class="col-lg-10">
-								<div class="row">
-									<form-builder data-item="filter"></form-builder>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+    <div id="filters.panel" class="panel panel-default">
+        <div class="panel-heading">
+            <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
+            <h3 class="panel-title">
+                <em class="fa fa-filter mr-sm"></em>
+                Filters
+            </h3>
+        </div>
+        <div  class="form-horizontal">
+            <div collapse="filters.panel" class="panel-wrapper">
+                <div class="panel-body pb">
+                    <div class="row">
+                        <div class="col-lg-10">
+                            <div class="row">
+                                <form-builder data-type="filter"></form-builder>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="panel panel-default">
         <div class="panel-heading pb0">
+
+            <div class="row mt-sm mb0">
+
+                <div class="col-xs-6">
+                    <h3 class="panel-title mt">
+                        <em class="icon-layers mr-sm"></em>
+                        Data list
+                    </h3>
+                </div>
+
+
                 <div class="col-xs-6">
                     <action-builder data-item="top"></action-builder>
                 </div>
+
             </div>
         </div>
 
@@ -46,13 +58,13 @@
         <div ng-class="{'p-xl whirl traditional': !vm.dt.initialized}" class="panel-body">
 
             <table
-                ng-if="vm.dt.initialized"
-                datatable="locales"
-                dt-options="vm.dt.options"
-                dt-instance="vm.dt.instance"
-                class="table-bordered table-striped hover"
-                cellspacing="0"
-                ng-click="vm.onTableClickEvent($event)">
+                    ng-if="vm.dt.initialized"
+                    datatable="locales"
+                    dt-options="vm.dt.options"
+                    dt-instance="vm.dt.instance"
+                    class="table-bordered table-striped hover"
+                    cellspacing="0"
+                    ng-click="vm.onTableClickEvent($event)">
                 <thead>
                 <tr>
                     <th ng-repeat="column in vm.dt.columns" class="bt0 bl0">{{ column }}</th>
