AC-256 Runner entity

--- a/web/admin/source/resource/html/grid-template.html
+++ b/web/admin/source/resource/html/grid-template.html
@@ -1,6 +1,6 @@
 <h3>
-	<em class="icon-globe-alt mr"></em>
-	<span translate="locales.LOCALES">Locales</span>
+	<em class={{titleClass}}></em>
+	<span translate="{{title}}"></span>
 </h3>
 
 	<div ng-controller="FormBuilderController as vm">
