AC-233 Import from site User grid

--- a/web/admin/source/resource/html/grid-template.html
+++ b/web/admin/source/resource/html/grid-template.html
@@ -129,7 +129,7 @@
 					ng-click="vm.onTableClickEvent($event)">
 					<thead>
 					<tr>
-						<th ng-repeat="column in vm.dt.columns" class="bt0 bl0">{{ column }}</th>
+						<th ng-repeat="column in vm.dt.columns" class="bt0 bl0" translate="{{ column }}"></th>
 						<th data-sortable="false" class="bt0 bl0" width="1"></th>
 						<th data-sortable="false" class="bt0 bl0 p text-center" width="1">
 							<div class="checkbox c-checkbox needsclick m0">
