AC-230 Create client actions builder

--- a/web/admin/source/resource/html/dashboard.html
+++ b/web/admin/source/resource/html/dashboard.html
@@ -310,9 +310,9 @@
             <div id="ReceivedEmailsPanel" class="panel panel-default" ng-class="{'traditional whirl' : onLoading}">
                 <div class="panel-heading">
                     <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
-                    <div class="panel-title" translate="admin.dashboard.widget.EMAIL_RECIEVED">
+                    <div class="panel-title">
                         <em class="icon-layers mr"></em>
-                        Email received from applications (24 hours)
+                        <span translate="admin.dashboard.widget.RECEIVED_EMAILS_FROM_APPS_24H">Email received from applications (24 hours)</span>
                     </div>
                 </div>
                 <div collapse="ReceivedEmailsPanel" class="panel-wrapper">
