AC-242 Make refactoring form builders in front
Fixed  comments

--- a/web/admin/source/resource/html/grid-template.html
+++ b/web/admin/source/resource/html/grid-template.html
@@ -87,5 +87,4 @@
     </div>
 </script>
 
-<toaster-container style="z-index:200000;"
-                   toaster-options="{'position-class': 'toast-bottom-right'}"></toaster-container>
+<toaster-container toaster-options="{'position-class': 'toast-bottom-right'}"></toaster-container>
