--- a/web/admin/source/resource/html/grid-template.html
+++ b/web/admin/source/resource/html/grid-template.html
@@ -81,7 +81,7 @@
     <div style="overflow: auto">
         <h3 class="mt0 mb-lg">
             <em class={{$parent.titleClass}}></em>
-            Create new {{$parent.title}}
+            {{ActionName}} {{$parent.title}}
         </h3>
         <form-builder data-type="create-update" class="form-horizontal"></form-builder>
     </div>
