--- a/web/admin/source/resource/html/grid-template.html
+++ b/web/admin/source/resource/html/grid-template.html
@@ -83,7 +83,7 @@
             <em class={{$parent.titleClass}}></em>
             {{ actionName | translate}}
         </h3>
-        <form-builder data-type="create-update" class="form-horizontal"></form-builder>
+        <form-builder data-type="create-update" class="form-horizontal" id="data-table-form"></form-builder>
     </div>
 </script>
 
