AC-302 Fix problems builders

--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -16,10 +16,10 @@
 </div>
 
 <div class="panel panel-default">
-    <div class="panel-heading">
+    <div class="panel-heading pb0">
         <div class="row">
             <div class="col-xs-6">
-                <h3 class="panel-title">
+                <h3 class="panel-title mt">
                     <em class="icon-layers mr-sm"></em>
                     <span translate="">Data list</span>
                 </h3>
@@ -47,9 +47,9 @@
                 </div>
             </div>
         </div>
-        <hr class="mt" />
+        <hr class="mt mb0" />
     </div>
     <div class="panel-body">
-        <crud-datatables></crud-datatables>
+        <crud-datatable />
     </div>
 </div>
